[project]
name = "testservice1"
version = "0.1.0"
description = "FastAPI service for testservice1"
requires-python = ">=3.10"

[tool.poetry.dependencies]
# Add your deps here, e.g. fastapi = "^0.110", uvicorn = "^0.23", sqlalchemy = "^2.0", alembic = "^1.12"

[tool.poetry.group.dev.dependencies]
# e.g. pytest = "^7.0", httpx = "^0.25", black = "^23.0", isort = "^5.12", mypy = "^1.6"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
